// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`services > review > countReviews > successful 1`] = `
[
  {
    "reviews": {
      "$size": 0,
    },
  },
]
`;

exports[`services > review > countReviews > successful 2`] = `
[
  {
    "$expr": {
      "$gt": [
        {
          "$size": {
            "$filter": {
              "as": "item",
              "cond": {
                "$and": [
                  {
                    "$in": [
                      "$$item.entity",
                      [
                        "user:test",
                      ],
                    ],
                  },
                  {
                    "$in": [
                      "$role",
                      "$$item.roles",
                    ],
                  },
                ],
              },
              "input": "$model.collaborators",
            },
          },
        },
        0,
      ],
    },
  },
]
`;

exports[`services > review > createReleaseReviews > successful 1`] = `[]`;

exports[`services > review > findReviewsByActive > active 1`] = `
[
  {
    "reviews": {
      "$size": 0,
    },
  },
]
`;

exports[`services > review > findReviewsByActive > active 2`] = `
[
  {
    "$expr": {
      "$gt": [
        {
          "$size": {
            "$filter": {
              "as": "item",
              "cond": {
                "$and": [
                  {
                    "$in": [
                      "$$item.entity",
                      [
                        "user:test",
                      ],
                    ],
                  },
                  {
                    "$in": [
                      "$role",
                      "$$item.roles",
                    ],
                  },
                ],
              },
              "input": "$model.collaborators",
            },
          },
        },
        0,
      ],
    },
  },
]
`;

exports[`services > review > findReviewsByActive > not active 1`] = `
[
  {
    "reviews": {
      "$not": {
        "$size": 0,
      },
    },
  },
]
`;

exports[`services > review > findReviewsByActive > not active 2`] = `
[
  {
    "$expr": {
      "$gt": [
        {
          "$size": {
            "$filter": {
              "as": "item",
              "cond": {
                "$and": [
                  {
                    "$in": [
                      "$$item.entity",
                      [
                        "user:test",
                      ],
                    ],
                  },
                  {
                    "$in": [
                      "$role",
                      "$$item.roles",
                    ],
                  },
                ],
              },
              "input": "$model.collaborators",
            },
          },
        },
        0,
      ],
    },
  },
]
`;
